<resources>
    <string name="app_name">My Security</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="Email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="menu_home">Home</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us"><u>About Us</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="version">Version 1</string>
    <string name="sign_in">SIGN IN</string>
    <string name="Password">Password</string>
    <string name="or">OR</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account"><u>Don\'t Have an Account?</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="rePassword">Re-Type Password</string>
    <string name="are_you_robot">Clicking on Sign Up button\nyou agree that you are not a robot.</string>
    <string name="resetpassword">Reset Password</string>
    <string name="goback"><u><![CDATA[<<Go Back]]></u></string>
    <string name="recovert_email">Recovery email sent successfully !\n Check your Inbox.</string>
    <string name="remember_me">Remember Email?</string>
    <string name="already_have_an_account"><u>Already Have an Account?</u></string>
    <string name="contains_at_least_8_characters">Contains at least 8 characters</string>
    <string name="contains_minimum_one_uppercase">Contains minimum one uppercase</string>
    <string name="contains_minimum_one_number">Contains minimum one number</string>
    <string name="contains_one_symbol">Contains one symbol</string>
    <string name="your_password_is_strong">Your password is strong.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="first_fragment_label">First Fragment Label</string>
    <string name="second_fragment_label">Second Fragment Label</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="tap_to_login_ith_fingerprint">Provide Biometric to enable SignIn</string>

</resources>