<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="vertical"
    android:background="@color/black"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">


    <ImageView
        android:id="@+id/user_profile"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="15dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@mipmap/logo_round" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:id="@+id/emailview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/ash"
        android:layout_marginLeft="20dp"/>


</LinearLayout>