<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_reg">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Auth.ResetPasswordFragment">

        <!-- TODO: Update blank fragment layout -->

<!--        Background design-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="-22dp"
                android:layout_marginRight="-1dp"
                android:src="@mipmap/reset_password"/>

        </LinearLayout>

<!--        Reset password text-->
        <TextView
            android:id="@+id/signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.TextView.SpinnerItem"
            android:text="@string/resetpassword"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"/>


<!--        email input-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/ash"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="35dp" >

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/Email"
                android:background="@color/black"
                android:textColorHint="@color/ash"
                android:textColor="@color/white"
                android:enabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

<!--        message for mail-->
        <LinearLayout
            android:id="@+id/forgotpass_icon_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/forgotpass_email_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_baseline_mail_outline"
                android:layout_gravity="center"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/forgotpass_email_icon_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recovert_email"
                android:textColor="@color/green"
                android:textAlignment="center"
                android:layout_marginStart="5dp"
                android:visibility="gone"/>

        </LinearLayout>


<!--        Reset Progress Bar -->
        <ProgressBar
            android:id="@+id/forgotpass_progressbar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:layout_marginTop="140dp"
            android:visibility="gone"
            />


<!--            Reset Password button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetpassbtn"
            android:layout_width="200dp"
            android:layout_height="60dp"
            app:cornerRadius="18dp"
            android:text="@string/resetpassword"
            android:backgroundTint="@color/blue"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:enabled="false"
            android:layout_marginTop="188dp"
            />

<!--            go back button-->
        <TextView
            android:id="@+id/goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="300dp"
            android:layout_gravity="center"
            android:text="@string/goback"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="true"
            android:textColor="@color/green"
            android:textSize="18sp"
            tools:ignore="AllCaps"
            android:enabled="true"/>

    </FrameLayout>
</ScrollView>